(library
 (name persistent_array)
 (modules persistent_array)
 (libraries base))

(test
 (name persistent_array_test)
 (modules persistent_array_test)
 (libraries persistent_array))

(library
 (name persistent_segtree)
 (modules persistent_segtree))

(test
 (name persistent_segtree_test)
 (modules persistent_segtree_test)
 (libraries persistent_segtree))

(library
 (name treap)
 (modules treap)
 (libraries base))
